; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_lock_graph.c_ReturnWaitGraph.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_lock_graph.c_ReturnWaitGraph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64, i64, i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i32)* @ReturnWaitGraph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ReturnWaitGraph(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca [9 x i32], align 16
  %9 = alloca [9 x i32], align 16
  %10 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 0, i64* %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32* @SetupTuplestore(i32 %11, i32* %6)
  store i32* %12, i32** %7, align 8
  store i64 0, i64* %5, align 8
  br label %13

13:                                               ; preds = %97, %2
  %14 = load i64, i64* %5, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ult i64 %14, %17
  br i1 %18, label %19, label %100

19:                                               ; preds = %13
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 1
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %21, align 8
  %23 = load i64, i64* %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i64 %23
  store %struct.TYPE_5__* %24, %struct.TYPE_5__** %10, align 8
  %25 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 0
  %26 = call i32 @memset(i32* %25, i32 0, i32 36)
  %27 = getelementptr inbounds [9 x i32], [9 x i32]* %9, i64 0, i64 0
  %28 = call i32 @memset(i32* %27, i32 0, i32 36)
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 8
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @Int32GetDatum(i32 %31)
  %33 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 0
  store i32 %32, i32* %33, align 16
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 7
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @Int32GetDatum(i32 %36)
  %38 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 1
  store i32 %37, i32* %38, align 4
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %54

43:                                               ; preds = %19
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = call i32 @Int64GetDatum(i64 %46)
  %48 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 2
  store i32 %47, i32* %48, align 8
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 6
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @TimestampTzGetDatum(i32 %51)
  %53 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 3
  store i32 %52, i32* %53, align 4
  br label %57

54:                                               ; preds = %19
  %55 = getelementptr inbounds [9 x i32], [9 x i32]* %9, i64 0, i64 2
  store i32 1, i32* %55, align 8
  %56 = getelementptr inbounds [9 x i32], [9 x i32]* %9, i64 0, i64 3
  store i32 1, i32* %56, align 4
  br label %57

57:                                               ; preds = %54, %43
  %58 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %59 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %58, i32 0, i32 5
  %60 = load i32, i32* %59, align 4
  %61 = call i32 @Int32GetDatum(i32 %60)
  %62 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 4
  store i32 %61, i32* %62, align 16
  %63 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %64 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %63, i32 0, i32 4
  %65 = load i32, i32* %64, align 8
  %66 = call i32 @Int32GetDatum(i32 %65)
  %67 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 5
  store i32 %66, i32* %67, align 4
  %68 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %69 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %68, i32 0, i32 1
  %70 = load i64, i64* %69, align 8
  %71 = icmp ne i64 %70, 0
  br i1 %71, label %72, label %83

72:                                               ; preds = %57
  %73 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %74 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %73, i32 0, i32 1
  %75 = load i64, i64* %74, align 8
  %76 = call i32 @Int64GetDatum(i64 %75)
  %77 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 6
  store i32 %76, i32* %77, align 8
  %78 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %79 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %78, i32 0, i32 3
  %80 = load i32, i32* %79, align 4
  %81 = call i32 @TimestampTzGetDatum(i32 %80)
  %82 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 7
  store i32 %81, i32* %82, align 4
  br label %86

83:                                               ; preds = %57
  %84 = getelementptr inbounds [9 x i32], [9 x i32]* %9, i64 0, i64 6
  store i32 1, i32* %84, align 8
  %85 = getelementptr inbounds [9 x i32], [9 x i32]* %9, i64 0, i64 7
  store i32 1, i32* %85, align 4
  br label %86

86:                                               ; preds = %83, %72
  %87 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %88 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %87, i32 0, i32 2
  %89 = load i32, i32* %88, align 8
  %90 = call i32 @BoolGetDatum(i32 %89)
  %91 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 8
  store i32 %90, i32* %91, align 16
  %92 = load i32*, i32** %7, align 8
  %93 = load i32, i32* %6, align 4
  %94 = getelementptr inbounds [9 x i32], [9 x i32]* %8, i64 0, i64 0
  %95 = getelementptr inbounds [9 x i32], [9 x i32]* %9, i64 0, i64 0
  %96 = call i32 @tuplestore_putvalues(i32* %92, i32 %93, i32* %94, i32* %95)
  br label %97

97:                                               ; preds = %86
  %98 = load i64, i64* %5, align 8
  %99 = add i64 %98, 1
  store i64 %99, i64* %5, align 8
  br label %13

100:                                              ; preds = %13
  %101 = load i32*, i32** %7, align 8
  %102 = call i32 @tuplestore_donestoring(i32* %101)
  ret void
}

declare dso_local i32* @SetupTuplestore(i32, i32*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @Int32GetDatum(i32) #1

declare dso_local i32 @Int64GetDatum(i64) #1

declare dso_local i32 @TimestampTzGetDatum(i32) #1

declare dso_local i32 @BoolGetDatum(i32) #1

declare dso_local i32 @tuplestore_putvalues(i32*, i32, i32*, i32*) #1

declare dso_local i32 @tuplestore_donestoring(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
